--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Translation Boost | The boost your company needs</title>
-    <meta name="description" content="Ofrecemos servicios profesionales de traducción e interpretación en español, inglés y alemán. | Wir bieten professionelle Übersetzungs- und Dolmetscherdienste in Spanisch, Englisch und Deutsch an">
+    <meta name="description" content="We specialize in Spanish to English and German to English translations, with the ability to handle other language combinations or interpretations. ">
     <meta name="keywords" content="traducción e interpretación, servicios de traducción, servicios de interpretación, español, inglés, alemán, traductores certificados, comunicación multilingüe, TranslationHub, Übersetzungsdienste, Dolmetscherdienste, interpreting, translation, german to english, español a ingles, consecutive interpreting, simultaneous interpreting, interpreter, translator, german, español, english, inglés">
     <script type="application/ld+json">
       {
