--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <body>
     <div id="app" class="w-100"></div>
     <script type="module" src="/src/main.js"></script>
-    <h1 style="display: none;">translationboost.com Servicios de Lingüísticos, Traducción, Interpretación y Revisión de Textos | Sprachdienste, Übersetzungen, Dolmetschen und Textkorrektur</h1>
+    <h1 style="display: none;">Translation, Interpreting and Proofreading Services | Servicios Lingüísticos, Traducción, Interpretación y Revisión de Textos | Sprachdienste, Übersetzungen, Dolmetschen und Textkorrektur</h1>
     <h2 style="display: none;">Servicios de <strong>Traducción de Español a Inglés y de Alemán a Inglés </strong>| translationboost.com Übersetzungsdienste von Spanisch auf Englisch und Deutsch auf Englisch</h2>
     <h2 style="display: none;">Servicios de Revisión de documentos de Español a Inglés y de Alemán a Inglés translationboost.com | Lektoratsdienste für Spanisch auf Englisch und Deutsch auf Englisch</h2>
     <h2 style="display: none;">Servicios de Interpretación de Español a Inglés y de Alemán a Inglés | translationboost.com Dolmetscherdienste für Spanisch auf Englisch und Deutsch auf Englisch</h2>
