--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <body>
     <div id="app" class="w-100"></div>
     
-    <h1 style="display: none;">translationboost.com Disponemos de diferentes Servicios de Lingüísticos, Traducción, Interpretación y Revisión de Textos | Sprachdienste, Übersetzungen, Dolmetschen und Textkorrektur</h1>
+    <h1 style="display: none;">Translation, Interpreting and Proofreading Services Disponemos de diferentes Servicios de Lingüísticos, Traducción, Interpretación y Revisión de Textos | Sprachdienste, Übersetzungen, Dolmetschen und Textkorrektur</h1>
     <h2 style="display: none;">Servicios de <strong>Traducción de Español a Inglés y de Alemán a Inglés </strong>| translationboost.com Übersetzungsdienste von Spanisch auf Englisch und Deutsch auf Englisch</h2>
     <h2 style="display: none;">Servicios de Revisión de documentos de Español a Inglés y de Alemán a Inglés translationboost.com | Lektoratsdienste für Spanisch auf Englisch und Deutsch auf Englisch</h2>
     <h2 style="display: none;">Servicios de Interpretación de Español a Inglés y de Alemán a Inglés | translationboost.com Dolmetscherdienste für Spanisch auf Englisch und Deutsch auf Englisch</h2>
@@ -71,7 +71,7 @@
     <a href="https://commission.europa.eu/resources-partners/etranslation_en" style="display: none;">Raw Translation from the EU Commission</a>
     <a href="https://www.translationhub.es" style="display: none;">TranslationHub.es Servicios de traducción especializados del alemán al inglés, german to english, interpreting, translation, proofreading.</a>
     <a href="https://www.tutraduccion.es" style="display: none;">Tutraduccion.es Servicios de traducción especializados del español al inglés, spanish to english , traducción, interpretación, correccion de textos. Ayuda a empresas, catapulta empresas, apertura exterior.</a>
-    <a href="https://www.translationboost.com" style="display: none;">Translationboost.com Translation Service, "German to English", "Spanish to English", Interpreting German to English, Spanish to English, Servicios linguisticos, language services, translation, interpreting, proofreading.</a>
+    <a href="https://www.translationboost.com" style="display: none;">Translationboost.com Translation Services, "German to English", "Spanish to English", Interpreting German to English, Spanish to English, Servicios linguisticos, language services, translation, interpreting, proofreading.</a>
     <a href="https://www.facebook.com/profile.php?id=61552157811215" style="display: none;">Translationboost.com facebook , our social network, translation, interpreting, proofreading.</a>
   </body>
 </html>
