--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         "name": "TranslationHub",
         "description": "Professional translation and interpretation services in Spanish, English, and German. Quality language solutions for your business.",
         "url": "https://www.translationboost.com",
-        "logo": "https://www.translationboost.com/src/assets/logoTH.webp",
+        "logo": "https://www.translationboost.com/logoTH.webp",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "Boecillo",
