--- a/index.html
+++ b/index.html
@@ -14,28 +14,29 @@
     <meta charset=UTF-8>
     <meta name="robots" content="index, follow">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="https://www.translationboost.com/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="48x48" href="/favicon.ico">
     <link rel="canonical" href="https://www.translationboost.com" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self';object-src 'none'">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Translation Boost | The boost your company needs</title>
-    <meta name="description" content="Ofrecemos servicios profesionales de traducción e interpretación en español, inglés y alemán. | Wir bieten professionelle Übersetzungs- und Dolmetscherdienste in Spanisch, Englisch und Deutsch an">
+    <meta name="description" content="Professional translation and interpretation services in Spanish, English, and German. Quality language solutions for your business.">
     <meta name="keywords" content="traducción e interpretación, servicios de traducción, servicios de interpretación, español, inglés, alemán, traductores certificados, comunicación multilingüe, TranslationHub, Übersetzungsdienste, Dolmetscherdienste, interpreting, translation, german to english, español a ingles, consecutive interpreting, simultaneous interpreting, interpreter, translator, german, español, english, inglés">
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
-        "@type": "Organization",
-        "name": "TranslationHub",
-        "description": "Ofrecemos servicios profesionales de traducción e interpretación del español al inglés y del alemán al inglés. | Wir bieten professionelle Übersetzungs- und Dolmetscherdienste in Spanisch, Englisch und Deutsch an.",
+        "@type": "Company",
+        "name": "TranslationBoost",
+        "description": "Professional translation and interpretation services in Spanish, English, and German. Quality language solutions for your business.",
         "url": "https://www.translationboost.com",
-        "logo": "https://www.translationboost.com/src/assets/logoTH.webp",
+        "logo": "https://www.translationboost.com/logoTH.webp",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "Boecillo",
           "addressLocality": "Valladolid",
           "addressRegion": "Castilla y León",
           "postalCode": "47151",
-          "addressCountry": "España"
+          "addressCountry": "Spain"
         },
         "contactPoint": {
           "@type": "ContactPoint",
@@ -47,7 +48,7 @@
       <style>
         @font-face {
           font-family: 'Montserrat';
-          src: url('/src/assets/Montserrat-VariableFont_wght.ttf') format('truetype');
+          src: url('/src/assets/Montserrat.ttf') format('truetype');
           font-weight: 300 700; 
           font-style: normal;
           font-display: swap;
