--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="canonical" href="https://www.translationboost.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Translation Boost | The boost your company needs</title>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self';object-src 'none'">
     <meta name="description" content="Professional translation and interpretation services in Spanish, English, and German. Quality language solutions for your business.">
     <meta name="keywords" content="traducción e interpretación, servicios de traducción, servicios de interpretación, español, inglés, alemán, traductores certificados, comunicación multilingüe, TranslationHub, Übersetzungsdienste, Dolmetscherdienste, interpreting, translation, german to english, español a ingles, consecutive interpreting, simultaneous interpreting, interpreter, translator, german, español, english, inglés">
     <script type="application/ld+json">
