--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YZQRGNN9C3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YZQRGNN9C3');
+</script>
     <meta charset=UTF-8>
     <meta name="robots" content="index, follow">
     <link rel="icon" type="image/x-icon" href="/assets/favicon-3016e4ef.ico">
