--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset=UTF-8>
+    <meta name="author" content="wolfman86">
+    <meta name="date" content="2024-02-20">
+    <meta name="copyright" content="© 2024, wolfman86">
+    <meta name="subject" content="Translation and Interpreting">
     <meta name="robots" content="index, follow">
     <link rel="icon" type="image/x-icon" href="/assets/favicon-3016e4ef.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon-3016e4ef.ico">
