--- a/index.html
+++ b/index.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    
-<!-- Google tag (gtag.js) -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZQRGNN9C3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-YZQRGNN9C3');
-</script> -->
+  <head> 
     <meta charset=UTF-8>
     <meta name="robots" content="index, follow">
-    <link rel="icon" type="image/x-icon" href="/assets/favicon-3016e4ef.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon-3016e4ef.ico">
     <link rel="apple-touch-icon" sizes="48x48" href="/assets/favicon-3016e4ef.ico">
     <link rel="canonical" href="https://www.translationboost.com" />
@@ -53,8 +43,7 @@
           font-weight: 300 700; 
           font-style: normal;
           font-display: swap;
-        }
-      
+        }      
         body {
           font-family: 'Montserrat', sans-serif;
         }
